// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge euiBadge--iconLeft euiBadge--default testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered with iconOnClick and onClick provided 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--default testClass1 testClass2"
>
  <span
    class="euiBadge__content"
  >
    <button
      aria-label="aria-label"
      class="euiBadge__childButton"
      data-test-subj="test subject string"
    >
      Content
    </button>
  </span>
</span>
`;

exports[`EuiBadge is rendered with iconOnClick provided 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge euiBadge--iconLeft euiBadge--default testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered with onClick provided 1`] = `
<button
  aria-label="aria-label"
  class="euiBadge euiBadge-isClickable euiBadge--iconLeft euiBadge--default testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content"
  >
    <span>
      Content
    </span>
  </span>
</button>
`;

exports[`EuiBadge props color accent is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--accent"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color danger is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--danger"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color default is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--default"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color hollow is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--hollow"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color primary is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--primary"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color secondary is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--secondary"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color warning is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--warning"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props iconSide left is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--default"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
    <svg
      class="euiIcon euiIcon--small euiIcon-isLoading euiBadge__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
</span>
`;

exports[`EuiBadge props iconSide right is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconRight euiBadge--default"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
    <svg
      class="euiIcon euiIcon--small euiIcon-isLoading euiBadge__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
</span>
`;

exports[`EuiBadge props iconType is rendered 1`] = `
<span
  class="euiBadge euiBadge--iconLeft euiBadge--default"
>
  <span
    class="euiBadge__content"
  >
    <span
      class="euiBadge__text"
    >
      Content
    </span>
    <svg
      class="euiIcon euiIcon--small euiIcon-isLoading euiBadge__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
</span>
`;
